# academic-assistant-backend

./: .env.example  .gitignore  README.md  api documentation.md  auth_test.py  calendar_planner_interface.py  calendar_planner_model_log.jsonl  chat_loop.py  check_qwen_thinking.py  chunk_boundary_report.py  clear_dbs.py  config.py  db.py  db_inspect.py  db_query.py  delete_calendar_plan_refs.py  gemma_engine.py  gemma_raw_output_log.jsonl  inspect_chunks.py  inspect_chunks_detailed.py  interface.py  main.py  ollama_parser.py  parser.py  planner_ai.py  planner_app.py  planner_calendar.py  planner_common.py  planner_persistence.py  planner_scheduling.py  planner_toolbox.py  pyproject.toml  rag_engine.py  rag_pipeline.py  requirements.txt  semantic_chunking.py  test_json_new_sdk.py  test_ollama_server.py  view_chunk_full.py
backend/: __init__.py  config.py  llm.py  main.py  timezone_utils.py
backend/auth/: calendar_credentials.py  dependencies.py  google.py  jwt.py  router.py
backend/chat/: __init__.py  router.py  service.py
backend/db/: models.py  session.py
backend/documents/: __init__.py  ingest_tasks.py  router.py  service.py
backend/operations/: __init__.py  logs.py  router.py
backend/plans/: __init__.py  router.py  service.py
backend/schedules/: __init__.py  router.py  service.py
backend/sessions/: __init__.py  briefing.py  retrieval.py  router.py  service.py
backend/sse/: __init__.py  utils.py
